--- a/.github/workflows/metrics.yaml
+++ b/.github/workflows/metrics.yaml
@@ -2,7 +2,9 @@
 name: Metrics
 on:
   schedule:
-    - cron: "0 1 * * *"
+    # https://crontab.guru/#0_1_*_*_1-5
+    # At 01:00 on every day-of-week from Monday through Friday.
+    - cron: "0 1 * * 1-5"
   workflow_dispatch:
   push:
     branches:
